[package]
name = "blue_flame_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# blue engine
#blue_engine = {version = "0.4.28", default-features = false}
blue_engine = "0.6.5"
blue_engine_utilities = {version = "0.6.5", features = ["egui"]}
#blue_engine_egui = "0.4.4"


# Db shit
#postcard = "1.1.1"
#postcard = "1.0.4"
postcard = {version = "1.1.1", features = ["use-std"]}
serde = "1.0.157"

# Dirs
dirs = "3.0"

regex = "1.8.4"